# Argus

./: .env.example  .gitignore  README.md  pyproject.toml
concordia_korea_docs/: AGENTS.md  DOCUMENTATION_BUNDLE.md  DOCUMENTATION_SELF_REVIEW.md  README.md
concordia_korea_docs/docs/: architecture.md  coding-style.md
concordia_korea_docs/docs/adr/: 0001-project-architecture.md  0002-technology-stack.md  0003-testing-strategy.md
concordia_korea_docs/specs/korean-social-simulation/: brief.md  changelog.md  design.md  requirements.md  risks.md  tasks.md  verification.md
configs/: local.example.yaml  safety.example.yaml  scenarios.example.yaml
data/samples/: personas_fixture.jsonl
docs/: architecture.md  coding-style.md
docs/adr/: 001-mvp-architecture.md
examples/: run_product_reaction.yaml
outputs/: multi_scenario_report.md  round2_multi_family_report.md
scripts/: run_five_families.py  run_human_acts.py  run_multi_scenario.py
specs/korean-social-simulation/: changelog.md
src/korean_social_simulator/: __init__.py  cli.py  errors.py  models.py
src/korean_social_simulator/agents/: profile_builder.py
src/korean_social_simulator/config/: loader.py  models.py
src/korean_social_simulator/data/: huggingface_loader.py  loader.py
src/korean_social_simulator/evaluation/: metrics.py
src/korean_social_simulator/personas/: sampler.py
src/korean_social_simulator/rag/: base.py  pageindex_mcp.py
src/korean_social_simulator/reporting/: markdown.py
src/korean_social_simulator/safety/: validator.py
src/korean_social_simulator/scenarios/: compiler.py  registry.py
src/korean_social_simulator/simulation/: concordia_adapter.py  dry_run.py  nvidia_nim.py
src/korean_social_simulator/storage/: run_store.py
tests/golden/: test_golden.py
tests/golden/agent_profiles/: expected_profile.json
tests/golden/metrics/: expected_metrics.json
tests/golden/reports/: expected_report.md
tests/golden/scenario_plans/: expected_plan.json
tests/integration/: test_concordia_adapter_mocked.py
tests/smoke/: test_cli_help.py  test_product_reaction_dry_run.py
tests/unit/: test_errors.py  test_models.py
tests/unit/agents/: test_profile_builder.py
tests/unit/config/: test_config_validation.py
tests/unit/data/: test_fixture_loader.py  test_huggingface_loader_mocked.py
tests/unit/evaluation/: test_metrics.py
tests/unit/personas/: test_sampler.py
tests/unit/rag/: test_noop_retriever.py  test_pageindex_mcp_mocked.py
tests/unit/reporting/: test_markdown_report.py
(+4 files in other folders)
